tests/ui/enum-discriminant/repr-c-big-discriminant2.ptr64.stderr
error: `repr(C)` enum discriminant does not fit into C `int`
  --> $DIR/repr-c-big-discriminant2.rs:19:5
   |
LL |     B, // +1
   |     ^
   |
   = note: `repr(C)` enums with big discriminants are non-portable, and their size in Rust might not match their size in C
   = help: use `repr($int_ty)` instead to explicitly set the size of this enum

error: aborting due to 1 previous error

